RESOLVED FIXED305758
[GTK][WPE][Coordinated Graphics] Rendering glitches with UseDamagingInformationForCompositing and semi-transparent background color
https://bugs.webkit.org/show_bug.cgi?id=305758
Summary [GTK][WPE][Coordinated Graphics] Rendering glitches with UseDamagingInformati...
Fujii Hironori
Reported 2026-01-19 01:02:48 PST
[GTK][WPE][Coordinated Graphics] Rendering glitches with UseDamagingInformationForCompositing and semi-transparent background color ./Tools/Scripts/run-minibrowser --gtk --release --features=+PropagateDamagingInformation,+UseDamagingInformationForCompositing --bg-color "#00000050"
Attachments
Fujii Hironori
Comment 1 2026-01-19 04:10:49 PST
Fujii Hironori
Comment 2 2026-01-19 04:16:53 PST
*** Bug 305560 has been marked as a duplicate of this bug. ***
EWS
Comment 3 2026-01-20 01:39:17 PST
Committed 305867@main (67222a7c5bfe): <https://commits.webkit.org/305867@main> Reviewed commits have been landed. Closing PR #56825 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.