[Coordinated Graphics] Rendering glitches with UseDamagingInformationForCompositing and semi-transparent background color https://bugs.webkit.org/show_bug.cgi?id=305758

Reviewed by Carlos Garcia Campos.

If a non-opaque background color was specified and
UseDamagingInformationForCompositing feature was on, rendering glitches
occurred. It was reproducible with the following command:

> run-minibrowser --gtk --features=+PropagateDamagingInformation,+UseDamagingInformationForCompositing --bg-color "#00000050"

If a non-opaque background color is specified, the viewport is cleared before
setting a clipping rect. It should clear the viewport after setting a clipping
rect.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.cpp:
(WebKit::AcceleratedSurface::willRenderFrame):
(WebKit::AcceleratedSurface::clear):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/AcceleratedSurface.h:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::paintToCurrentGLContext):
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/ThreadedCompositorPlayStation.cpp:
(WebKit::ThreadedCompositor::paintToCurrentGLContext):

Canonical link: https://commits.webkit.org/305867@main